--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -14,7 +14,7 @@
                 <div *ngIf="albums.ok; else noDataTemplate" class="text-center heartBeat force-overflow">
                     <div class="card main sub-body" style="width: 16rem;" *ngFor="let album of albumsBD">
                         <div class="options flip">
-                                <img [src]="'/assets/icons/garbage.png'" (click)="deleteAlbum(album)" style="position: absolute; top: 12px; left: 210px; height: 35px; cursor: pointer;">
+                                <img [src]="'/assets/icons/garbage.svg'" (click)="deleteAlbum(album)" style="position: absolute; top: 12px; left: 210px; height: 35px; cursor: pointer;">
                         </div>
                         <div (click)="goGallery(album._id)" style="cursor: pointer;">
                             <img [src]="'/assets/images/empty.jpg'" class="card-img-top" style="height: 200px; border-radius: 30px 30px 0px 0px; cursor: pointer;">
