--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -9,7 +9,7 @@
   </div>
   <div class="col-10">
         <div class="jumbotron body mx-5" style="height: 500px; width: 1200px;">
-                <h1 class="text-center">My Almums</h1>
+                <h1 class="text-center">My Albums</h1>
             <div class="container scrollbar" id="style-6">
                 <div *ngIf="albums.ok; else noDataTemplate" class="text-center heartBeat force-overflow">
                     <div class="card main sub-body" style="width: 16rem;" *ngFor="let album of albumsBD">
@@ -17,7 +17,7 @@
                                 <img [src]="'/assets/icons/garbage.svg'" (click)="deleteAlbum(album)" style="position: absolute; top: 12px; left: 210px; height: 35px; cursor: pointer;">
                         </div>
                         <div (click)="goGallery(album._id)" style="cursor: pointer;">
-                            <img [src]="'/assets/images/empty.jpg'" class="card-img-top" style="height: 200px; border-radius: 30px 30px 0px 0px; cursor: pointer;">
+                            <img [src]="'/assets/images/logo.jpg'" class="card-img-top" style="height: 200px; border-radius: 30px 30px 0px 0px; cursor: pointer;">
                             <label class="btn btn-dark">{{album.images.length}} images</label>
                             <div class="card-body" style="height: 150px">
                                 <h5 class="card-title">{{album.name}}</h5>
