--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,4 @@
-<app-navbar (searchString)="searchWord($event)"></app-navbar>
+<app-navbar (searchString)="search($event)" (searchdate)="searchdate($event)" ></app-navbar>
 
 <div class="row">
 
