--- a/src/app/components/images/create-image/create-image.component.html
+++ b/src/app/components/images/create-image/create-image.component.html
@@ -35,11 +35,10 @@
                 </div>
 
                 <div class="form-group" style="background: url('assets/images/Path_12121.png')">
+                    <img [src]="imgPreview" alt="" style="height: 150px; width: 200px; display: block; border-radius: 20px;">
+                    <br>
                     <label>Image</label>
                     <input type="file" (change)="onInputImagelogoChange($event)" style="position: relative; left: 20px;" formControlName="file" name="file"  accept="image/*" multiple>
-                    <!-- <label for="file-1">
-                         <img src="assets/images/Group_10194.png" style="width: 50px; height: 50px;" alt="">
-                    </label> -->
                     <span class="text-danger invalid-control"
                         *ngIf="frmEntity().file.invalid && frmEntity().file.dirty">
                         Required field.
